@@ -6,6 +6,8 @@
 4. Add vmware and vmplayer to list of app to exclude from opacity settings. This
    also prevents using RGBA for rounded tooltips and popup menus.
 5. Fix opacity setting of squared popup menus.
+6. Improve group-box label positioning.
+7. Fix line-style group box when text is above or below the line.
 
 1.7.1
 -----
